--- a/01SOURCE/base-web/WebContent/template/css/framework.css
+++ b/01SOURCE/base-web/WebContent/template/css/framework.css
@@ -2,7 +2,9 @@ html,body,form {
 	height: 100%;
 	width: 100%;
 }
-
+form{
+	min-width:1000px;
+}
 .layui-col-md0, .layui-col-md1, .layui-col-md2, .layui-col-md3,
 	.layui-col-md4, .layui-col-md5, .layui-col-md6, .layui-col-md7,
 	.layui-col-md8, .layui-col-md9, .layui-col-md10, .layui-col-md11,
