--- a/01SOURCE/base-web/WebContent/template/css/framework.css
+++ b/01SOURCE/base-web/WebContent/template/css/framework.css
@@ -161,7 +161,23 @@ a {
 	margin: 8px 0px 0px 10px;
 	padding-bottom: 5px;
 }
-/* µ¯´°µÄajaxform */
-.layui-layer-title{
-	margin-bottom:15px;
-} 
+/**treeselect*/
+.layui-form-select .layui-tree {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 42px;
+    padding: 5px 0;
+    z-index: 999;
+    min-width: 100%;
+    border: 1px solid #d2d2d2;
+    max-height: 300px;
+    overflow-y: auto;
+    background-color: #fff;
+    border-radius: 2px;
+    box-shadow: 0 2px 4px rgba(0,0,0,.12);
+    box-sizing: border-box;
+}
+.layui-form-selected .layui-tree {
+    display: block;
+}
