--- a/01SOURCE/base-web/WebContent/template/css/framework.css
+++ b/01SOURCE/base-web/WebContent/template/css/framework.css
@@ -1,24 +1,27 @@
-html,body,form {
+html, body, form {
 	height: 100%;
 	width: 100%;
 }
+
 form form {
 	height: 0;
 	width: 100%;
 }
-.layui-layout-body form{
-	min-width:1000px;
+
+.layui-layout-body form {
+	min-width: 1000px;
 }
+
 .layui-col-md0, .layui-col-md1, .layui-col-md2, .layui-col-md3,
 	.layui-col-md4, .layui-col-md5, .layui-col-md6, .layui-col-md7,
 	.layui-col-md8, .layui-col-md9, .layui-col-md10, .layui-col-md11,
 	.layui-col-md12 {
 	height: 100%;
 }
-.lllayout{
-	clear:both;
-}
 
+.lllayout {
+	clear: both;
+}
 
 .layui-side-scroll {
 	width: 200px;
@@ -37,12 +40,15 @@ a {
 	padding: 0px 0;
 	background: #1c2229;
 }
-
+.layui-layout-admin .layui-side{
+	border-top:5px solid #1AA094;
+}
 .navMenu>li {
 	display: block;
 	margin: 0;
 	padding: 0;
 	border: 0px;
+	border-bottom:1px solid black;
 }
 
 .navMenu>li>a {
@@ -62,6 +68,7 @@ a {
 
 .navMenu>li:nth-of-type(1)>a {
 	/* border-top: 1px solid transparent; */
+	
 }
 
 .navMenu>li:last-child>a {
@@ -154,6 +161,7 @@ a {
 	cursor: pointer;
 	/* background: #1AA094; */
 }
+
 .navMenu>li>ul.sub-menu>li>ul.sub-menu>li>ul.sub-menu {
 	disp lay: none;
 	list-style: none;
@@ -163,21 +171,40 @@ a {
 }
 /**treeselect*/
 .layui-form-select .layui-tree {
-    display: none;
-    position: absolute;
-    left: 0;
-    top: 42px;
-    padding: 5px 0;
-    z-index: 999;
-    min-width: 100%;
-    border: 1px solid #d2d2d2;
-    max-height: 300px;
-    overflow-y: auto;
-    background-color: #fff;
-    border-radius: 2px;
-    box-shadow: 0 2px 4px rgba(0,0,0,.12);
-    box-sizing: border-box;
+	display: none;
+	position: absolute;
+	left: 0;
+	top: 42px;
+	padding: 5px 0;
+	z-index: 999;
+	min-width: 100%;
+	border: 1px solid #d2d2d2;
+	max-height: 300px;
+	overflow-y: auto;
+	background-color: #fff;
+	border-radius: 2px;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, .12);
+	box-sizing: border-box;
 }
+
 .layui-form-selected .layui-tree {
-    display: block;
+	display: block;
+}
+
+.inputbutton {
+	height: 38px;
+	width: 38px;
+	text-align: center;
+	line-height: 38px;
+	display: inline-block;
+	left: 100%;
+	margin-left: -38px;
+	top: 0px;
+	position: absolute;
+	background-color: #1EA296;
+	font-weight: bold;
+	color: white;
+	padding:0px;
+	border-top-left-radius:0;
+	border-bottom-left-radius:0;
 }
