--- a/01SOURCE/base-taglib/.settings/org.eclipse.wst.common.component
+++ b/01SOURCE/base-taglib/.settings/org.eclipse.wst.common.component
@@ -1,17 +1,1 @@
-<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="base-taglib">
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
-<<<<<<< HEAD
-        <dependent-module archiveName="base-common.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/base-common/base-common">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-=======
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
->>>>>>> bf17ff6ea5ed7c787092f3ccd0d7150de2d56315
-        <property name="java-output-path" value="/base-taglib/target/classes"/>
-        <property name="context-root" value="basetaglib"/>
-    </wb-module>
-</project-modules>
+<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId"/>
