--- a/01SOURCE/base-web/.settings/org.eclipse.wst.common.component
+++ b/01SOURCE/base-web/.settings/org.eclipse.wst.common.component
@@ -5,10 +5,10 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
-        <dependent-module archiveName="base-common-type.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/base-common-type/base-common-type">
+        <dependent-module archiveName="base-common.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/base-common/base-common">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="base-common.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/base-common/base-common">
+        <dependent-module deploy-path="/WEB-INF/lib" handle="module:/resource/base-common-util/base-common-util">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="context-root" value="baseweb"/>
