--- a/01SOURCE/base-web/.settings/org.eclipse.wst.common.component
+++ b/01SOURCE/base-web/.settings/org.eclipse.wst.common.component
@@ -8,6 +8,12 @@
         <dependent-module archiveName="base-common.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/base-common/base-common">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="base-common-util.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/base-common-util/base-common-util">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="base-jdbc.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/base-jdbc/base-jdbc">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="baseweb"/>
         <property name="java-output-path" value="/base-web/target/classes"/>
     </wb-module>
