--- a/01SOURCE/base-web/WebContent/template/css/framework.css
+++ b/01SOURCE/base-web/WebContent/template/css/framework.css
@@ -220,3 +220,9 @@ a {
 .layui-table-click,.layui-table-hover{
 	/* background-color:#DCF8A8; */
 }
+/*树*/
+.ztree {
+    overflow: scroll;
+    height: 100%;
+    padding:0;
+}
