--- a/01SOURCE/base-common/.settings/org.eclipse.wst.common.component
+++ b/01SOURCE/base-common/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="base-common">
         <wb-resource deploy-path="/" source-path="/src/main/java"/>
         <wb-resource deploy-path="/" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/" source-path="/target/generated-sources/java"/>
         <dependent-module archiveName="base-datajpa.jar" deploy-path="/" handle="module:/resource/base-datajpa/base-datajpa">
             <dependency-type>uses</dependency-type>
         </dependent-module>
