--- a/01SOURCE/base-web/.settings/org.eclipse.wst.common.component
+++ b/01SOURCE/base-web/.settings/org.eclipse.wst.common.component
@@ -8,9 +8,6 @@
         <dependent-module archiveName="base-common-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/base-common/base-common">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="base-datajpa-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/base-datajpa/base-datajpa">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
         <dependent-module archiveName="base-jdbc-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/base-jdbc/base-jdbc">
             <dependency-type>uses</dependency-type>
         </dependent-module>
@@ -18,6 +15,6 @@
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="java-output-path" value="/base-web/target/classes"/>
-        <property name="context-root" value="base-web"/>
+        <property name="context-root" value="baseweb"/>
     </wb-module>
 </project-modules>
