--- a/01SOURCE/base-web/WebContent/template/css/framework.css
+++ b/01SOURCE/base-web/WebContent/template/css/framework.css
@@ -240,3 +240,8 @@ a {
 .lllayout .layoutarea{
 	overflow:auto;
 }
+.layui-input-block .layui-input{
+	padding-left:0px;
+	margin-right:0px;
+	display:inline-block;
+} 
