--- a/01SOURCE/base-web/WebContent/template/css/framework.css
+++ b/01SOURCE/base-web/WebContent/template/css/framework.css
@@ -272,12 +272,6 @@ a {
 .layui-form-item{
 	font-size:16px;
 }
-/* .layui-form-selected dl{
-	z-index:10000;
-}
-.layui-form-selected dl dd{
-	z-index:10000;
-} */
 .layui-form-select dl{
 	max-height:220px;
 	min-width:0;
@@ -287,4 +281,7 @@ a {
 }
 .layui-form-select dl dd, .layui-form-select dl dt{
 	line-height: 20px;
+}
+.layui-form-select-dl-unselect {
+	display:none;
 }
