--- a/01SOURCE/base-web/.settings/org.eclipse.wst.common.component
+++ b/01SOURCE/base-web/.settings/org.eclipse.wst.common.component
@@ -11,6 +11,6 @@
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="java-output-path" value="/base-web/target/classes"/>
-        <property name="context-root" value="base-web"/>
+        <property name="context-root" value="baseweb"/>
     </wb-module>
 </project-modules>
