--- a/01SOURCE/base-web/WebContent/template/css/framework.css
+++ b/01SOURCE/base-web/WebContent/template/css/framework.css
@@ -42,43 +42,36 @@ a {
 /* navMenu */
 .layui-side-scroll {
 	padding: 0px 0;
-	background: #1c2229;
+	background: #333333;
 }
 
 .layui-layout-admin .layui-side {
 	border-top: 5px solid #1AA094;
 }
 
-.navMenu>li {
+.navMenu>li,.navMenu .sub-menu li {
 	display: block;
 	margin: 0;
 	padding: 0;
 	border: 0px;
-	border-bottom: 1px solid black;
+	border-bottom: 1px solid #515151;
+}
+
+.navMenu>li:last-child,.navMenu .sub-menu li:last-child {
+	border-bottom: 0px solid #515151;
 }
 
 .navMenu>li>a {
 	display: block;
 	overflow: hidden;
 	padding-left: 10px;
-	line-height: 40px;
-	color: #FFF;
+	line-height: 50px;
+	color:#b4b6bd;
 	transition: all .3s;
 	position: relative;
 	text-decoration: none;
 	font-size: 15px;
-	/* border-top: 1px solid #222932;
-	border-bottom: 2px solid #191e24; */
-	border-left: 5px solid #1C2229;
-}
-
-.navMenu>li:nth-of-type(1)>a {
-	/* border-top: 1px solid transparent; */
-	
-}
-
-.navMenu>li:last-child>a {
-	border-bottom: 1px solid transparent;
+	border-left: 5px solid #333333;
 }
 
 .navMenu>li>a>i {
@@ -119,14 +112,22 @@ a {
 	color: #FFF;
 	border-left: 5px solid #1AA094;
 	cursor: pointer;
+	background-color: #1AA094; 
+}
+.navMenu>li>ul.sub-menu li>a:hover,.navMenu>li>ul.sub-menu li>a.active {
+	border-left: 5px solid #1AA094;
+	cursor: pointer;
+	color: #FFF;
+	background-color: #1AA094; 
 }
 
 .navMenu>li>ul.sub-menu, .navMenu>li>ul.sub-menu>li>ul.sub-menu {
 	display: none;
 	list-style: none;
 	clear: both;
-	margin: 8px 0px 0px 10px;
-	padding-bottom: 5px;
+	margin: 0px 0px 0px 0px;
+	padding-left:10px;
+	/* padding-bottom: 5px; */
 }
 
 .navMenu>li>ul.sub-menu li {
@@ -140,8 +141,8 @@ a {
 	font-size: 15px;
 	line-height: 36px;
 	padding-left: 20px;
-	color: #FFF;
-	border-left: 5px solid #1c2229;
+	color:#b4b6bd;
+	border-left: 5px solid #333333;
 	clear: both;
 }
 
@@ -150,26 +151,25 @@ a {
 	font-size: 15px;
 	line-height: 36px;
 	padding-left: 30px;
-	color: #FFF;
-	border-left: 5px solid #1c2229;
+	color:#b4b6bd;
+	border-left: 5px solid #333333;
 	clear: both;
 }
 
-.navMenu>li>ul.sub-menu li>a:hover, .navMenu>li>ul.sub-menu>li.active>a
-	{
-	color: #FFF;
-	border-left: 5px solid #1AA094;
-	cursor: pointer;
+.navMenu .layui-icon,.sub-menu .layui-icon{
+	font-size: 18px; 
+	color: #ED8E1C;
+	/* background-image: url(ico_08.png); */
+	background-repeat:no-repeat;
+	vertical-align:middle;
+	width:20px;
+	height:40px;
+    background-position-y: center;
 }
 
-.navMenu>li>ul.sub-menu li>a.active {
-	border-left: 5px solid #1AA094;
-	cursor: pointer;
-	/* background: #1AA094; */
-}
 
 .navMenu>li>ul.sub-menu>li>ul.sub-menu>li>ul.sub-menu {
-	disp lay: none;
+	display: none;
 	list-style: none;
 	clear: both;
 	margin: 8px 0px 0px 10px;
@@ -406,4 +406,9 @@ a {
 }
 ll-filllayout{
 	display:none;
+}
+
+/*页面头部*/
+.title_value{
+	color:#ED8E1C;
 }
