--- a/01SOURCE/base-web/WebContent/template/css/framework.css
+++ b/01SOURCE/base-web/WebContent/template/css/framework.css
@@ -178,7 +178,7 @@ a {
 	margin: 8px 0px 0px 10px;
 	padding-bottom: 5px;
 }
-/**treeselect*/
+/* 
 .layui-form-select .layui-tree {
 	display: none;
 	position: absolute;
@@ -194,15 +194,15 @@ a {
 	border-radius: 2px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, .12);
 	box-sizing: border-box;
-}
+} */
 
 .layui-table-view {
 	margin: 0px;
 }
-
+/* 
 .layui-form-selected .layui-tree {
 	display: block;
-}
+} */
 
 .inputbutton {
 	height: 38px;
@@ -298,7 +298,7 @@ a {
 	font-size: 16px;
 }
 
-.layui-form-select dl {
+.ll-framework-vue-select dl {
 	max-height: 220px;
 	min-width: 0;
 }
@@ -307,13 +307,13 @@ a {
 	display: none;
 }
 
-.layui-form-select dl dd, .layui-form-select dl dt {
+.ll-framework-vue-select dl dd, .ll-framework-vue-select dl dt {
 	line-height: 20px;
 }
-.layui-form-select dl dd.layui-this{
+.ll-framework-vue-select dl dd.layui-this{
 	background-color:#1AA094;
 }
-.layui-form-select dl {
+.ll-framework-vue-select dl {
 	padding: 0px;
 	top: 38px;
 }
