--- a/01SOURCE/base-web-bootstrap/WebContent/template/css/framework.css
+++ b/01SOURCE/base-web-bootstrap/WebContent/template/css/framework.css
@@ -105,11 +105,6 @@ a {
 	padding: 5px 0 0px 0;
 }
 
-.lllayout>.layoutarea {
-	/* overflow:auto; */
-	
-}
-
 .layui-input-block>.layui-input {
 	padding-left: 0px;
 	padding-right: 0px;
@@ -211,7 +206,7 @@ a {
 
 .ll-fill-area-left-right-center {
 	height: 100%;
-	width: 5px;
+	width: 2px;
 	display: inline-block;
 	z-index: 100;
 	position: absolute;
@@ -239,23 +234,9 @@ a {
 	margin-top:-10px;
 	position:relative;
 	cursor:pointer;
-	background-image: url(../image/togglebar.gif);
+	/*background-image: url(../image/togglebar.gif);*/
 	background-repeat: no-repeat;
 	background-position: -20px -40px;
-}
-/* .ll-drag-to-left{
-	height:20px;
-	width:20px;
-	left:-15px;
-	top:50%;
-	margin-top:-10px;
-	position:relative;
-	cursor:pointer;
-	background-image: url(../image/togglebar.gif);
-	background-repeat: no-repeat;
-	background-position: -20px 0px;
-} */
-.ll-fill-area-left-right-center {
 }
 
 .layui-tab-title li:first-child i {
