--- a/01SOURCE/base-web-bootstrap/WebContent/template/css/framework.less
+++ b/01SOURCE/base-web-bootstrap/WebContent/template/css/framework.less
@@ -228,7 +228,7 @@ a {
 	margin-top:-10px;
 	position:relative;
 	cursor:pointer;
-	background-image: url(../image/togglebar.gif);
+	/*background-image: url(../image/togglebar.gif);*/
 	background-repeat: no-repeat;
 	background-position: -20px 0px;
 }
