--- a/01SOURCE/base-web-bootstrap/WebContent/template/css/framework.less
+++ b/01SOURCE/base-web-bootstrap/WebContent/template/css/framework.less
@@ -54,7 +54,9 @@ a {
 .layui-layout-admin .layui-side {
 	border-top: 5px solid #1AA094;
 }
-
+.btn{
+	background-color: @MenuBackgroundColor;
+}
 
 .layui-table-view {
 	margin: 0px;
