grid表格固定宽度

--- a/01SOURCE/base-web-bootstrap/WebContent/template/css/framework.less
+++ b/01SOURCE/base-web-bootstrap/WebContent/template/css/framework.less
@@ -297,3 +297,8 @@ ll-filllayout{
     border-radius: @BorderRadius!important; 
 }
 /* jquery step */
+
+/** bootstrap table */
+.table{
+    table-layout: fixed;
+}
