--- a/01SOURCE/base-web-bootstrap/WebContent/template/css/framework.less
+++ b/01SOURCE/base-web-bootstrap/WebContent/template/css/framework.less
@@ -285,7 +285,7 @@ ll-filllayout{
     padding-top: 42px;
 }
 
-/* jquery step*/
+/* ↓↓↓ jquery step*/
 .wizard > .steps a, .wizard > .steps a:hover, .wizard > .steps a:active {
     -webkit-border-radius: @BorderRadius!important; 
     -moz-border-radius: @BorderRadius!important; 
@@ -296,9 +296,16 @@ ll-filllayout{
     -moz-border-radius: @BorderRadius!important; 
     border-radius: @BorderRadius!important; 
 }
-/* jquery step */
+/* ↑↑↑jquery step */
 
-/** bootstrap table */
-.table{
+/** ↓↓↓bootstrap table */
+.bootstrapTable{
     table-layout: fixed;
 }
+.bootstrapTable td{
+    word-break:keep-all;/* 不换行 */
+    white-space:nowrap;/* 不换行 */
+    overflow:hidden;/* 内容超出宽度时隐藏超出部分的内容 */
+    text-overflow:ellipsis;/* 当对象内文本溢出时显示省略标记(...) ；需与overflow:hidden;一起使用。*/
+}
+/** ↑↑↑ bootstrap table */
