--- a/01SOURCE/base-web-bootstrap/WebContent/template/css/framework.less
+++ b/01SOURCE/base-web-bootstrap/WebContent/template/css/framework.less
@@ -324,6 +324,7 @@ ll-filllayout{
 }
 .ll-main{
 	background-color: @SystemMainColor!important; 
+	color:white!important; 
 }
 .ll-search{
 	
@@ -369,3 +370,5 @@ ll-filllayout{
 /** ↑↑↑布局LL-layout样式 */
 
 /*** 按钮相关 */
+.icon-visible{
+}
