代码以及属性

--- a/01SOURCE/base-web-bootstrap/WebContent/template/css/framework.less
+++ b/01SOURCE/base-web-bootstrap/WebContent/template/css/framework.less
@@ -383,3 +383,7 @@ ll-filllayout{
     background: @SystemMainColor!important; 
 }
 /*** ↑↑↑ switch */
+
+.mainBackGroundColor{
+	 background-color: @SystemMainColor!important; 
+}
