--- a/01SOURCE/base-web-bootstrap/WebContent/template/css/framework.less
+++ b/01SOURCE/base-web-bootstrap/WebContent/template/css/framework.less
@@ -392,3 +392,53 @@ ll-filllayout{
 a>.fa{
 	 margin-top: 3px!important; 
 }
+
+
+element.style {
+}
+.alert-info, .alert-info a, .bg-info, .bg-info a, .label-info, .label-info a {
+    color: #fff!important;
+}
+.small-box {
+    border-radius: .25rem;
+    box-shadow: 0 0 1px rgba(0,0,0,.125), 0 1px 3px rgba(0,0,0,.2);
+    position: relative;
+    display: block;
+    margin-bottom: 20px;
+}
+.callout, .card, .info-box, .mb-3, .my-3, .small-box {
+    margin-bottom: 1rem!important;
+}
+.alert-info, .bg-info, .label-info {
+    background-color: #17a2b8!important;
+}
+.bg-info {
+    background-color: #d9edf7;
+}
+.bg-warning {
+    background-color: #FFF331!important;
+}
+.small-box>.inner {
+    padding: 10px;
+}
+.small-box h3, .small-box p {
+    z-index: 5;
+}
+.small-box h3 {
+    font-size: 38px;
+    font-weight: 700;
+    margin: 0 0 10px 0;
+    white-space: nowrap;
+    padding: 0;
+}
+.small-box>.small-box-footer {
+    position: relative;
+    text-align: center;
+    padding: 3px 0;
+    color: #fff;
+    color: rgba(255,255,255,.8);
+    display: block;
+    z-index: 10;
+    background: rgba(0,0,0,.1);
+    text-decoration: none;
+}
