--- a/01SOURCE/springboot/bootweb/src/main/resources/static/css/framework.less
+++ b/01SOURCE/springboot/bootweb/src/main/resources/static/css/framework.less
@@ -302,6 +302,7 @@ ll-filllayout {
 
 .bootstrapTable {
 	table-layout: fixed;
+	font-size:14px! important;
 }
 
 .bootstrapTable td {
@@ -310,7 +311,10 @@ ll-filllayout {
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
-
+.bootstrapTable .th-inner {
+	font-size:14px! important;
+	font-weight:bold! important;
+}
 .btn-sm {
 	border-radius: @BorderRadius ! important;
 }
