--- a/01SOURCE/springboot/bootweb/src/main/resources/templates/sys/worksheet/worksheetQuery.html
+++ b/01SOURCE/springboot/bootweb/src/main/resources/templates/sys/worksheet/worksheetQuery.html
@@ -1,23 +1,19 @@
-
-<%
-	/** 
-	* 创   建   人： 刘磊
-	* 
-	* 创   建   时   间 ：2018年6月12日 
-	* 
-	* 类   说   明 ：
-	* 
-	* 修   改   人：          修   改   日   期：
-	*/
-%>
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-	pageEncoding="UTF-8"%>
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!-- 	/* 
+	 * 创   建   人： 刘磊
+	 * 
+	 * 创   建   时   间 ： 2017-10-11 下午10:02:29
+	 * 
+	 * 类   说   明 ：
+	 * 
+	 * ******************修改日志***********************************
+	 * 
+	 * 修改人： 修改日期： 修改内容：
+	 * 
+	 * 修改人： 修改日期： 修改内容：
+	*/ -->
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Insert title here</title>
-<%@ include file="/template/base.jsp"%>
+<template th:replace="/base.html"></template>
 </head>
 <body>
 	<form>
@@ -57,6 +53,6 @@
 			</ll:fillarealr>
 		</ll:filllayout>
 	</form>
-	<script type="text/javascript" src="worksheetQueryScript.js"></script>
+	<script type="text/javascript" th:insert="/sys/worksheet/worksheetQueryScript.js"></script>
 </body>
 </html>
