--- a/01SOURCE/springboot/bootweb/src/main/resources/templates/base.html
+++ b/01SOURCE/springboot/bootweb/src/main/resources/templates/base.html
@@ -100,6 +100,8 @@
 <link th:href="@{/static/plugins/bootstrap3-editable-1.5.1/bootstrap3-editable/css/bootstrap-editable.css}" rel="stylesheet" />
  <!-- switch -->
 <link th:href="@{/static/plugins/bootstrap-switch-master/dist/css/bootstrap3/bootstrap-switch.min.css}" rel="stylesheet" />
+<link th:rel="stylesheet" th:href="@{/static/plugins/jquery-steps-master/demo/css/jquery.steps.css}" />
+<script th:href="@{/static/plugins/jquery-steps-master/build/jquery.steps.js}"></script>
 
 <script th:inline="javascript">
 $(document).ready(function(){
