--- a/01SOURCE/springboot/bootweb/src/main/resources/templates/sys/admin/admin.html
+++ b/01SOURCE/springboot/bootweb/src/main/resources/templates/sys/admin/admin.html
@@ -17,47 +17,41 @@
 </head>
 <body>
 	<form>
-		<ll:filllayout width="200px">
+		<ll:filllayout>
 			<ll:fillarealr width="*">
 				<ll:filllayout>
-					<ll:fillareatb height="125" showtitle="true" title="查询条件" showborder="false">
-						<ll:ajaxform id="ajaxform" cols="2" colproportion="1:3:2:3:1:3">
-							<ll:formfield title="属性代码" field="code"></ll:formfield>
-							<ll:formfield title="属性名称" field="name"></ll:formfield>
-							<ll:formfield title="查询语句" field="query"></ll:formfield>
+					<ll:fillareatb height="85" showtitle="true" title="查询条件" showborder="false">
+						<ll:ajaxform id="ajaxform" cols="2" colproportion="1:3:3:3">
+							<ll:formfield id="name" title="操作员名称" field="name"></ll:formfield>
 							<ll:formtoolbar labelalign="right" colspan="1">
 								<button class="btn btn-info btn-sm ll-main" type="button" onclick="retrieve()" style="width: 100px;">
 									<span class="glyphicon glyphicon-search "></span> 查询
 								</button>  
-   										&nbsp;
-									</ll:formtoolbar>
+   								&nbsp;
+							</ll:formtoolbar>
 						</ll:ajaxform>
 					</ll:fillareatb>
 					<ll:fillareatb height="35">
-						<button type="button" style="width: 70px;" class="btn btn-default btn-sm " onclick="addNewRecord();">
+						<button type="button" style="width: 70px;" class="btn btn-default btn-sm " onclick="maintenceAdmin();">
 							<span class="glyphicon glyphicon-plus ll_add_icon"></span> 增加
 						</button>
 						<button type="button" style="width: 70px;" class="btn btn-default btn-sm" onclick="onClickDelete();">
 							<span class="glyphicon glyphicon-trash ll_delete_icon"></span> 删除
 						</button>
-						<button class="btn btn-info btn-sm ll-main" style="width: 70px;" type="button" onclick="onClickSave()">
-							<span class="glyphicon glyphicon-ok "></span> 保存
-						</button>
 					</ll:fillareatb>
-					<ll:fillareatb height="*" showtitle="true" title="权限列表">
-						<ll:ajaxgrid id="ajaxgrid" onrowclick="rowClickTest()" onpageclick="retrieveAjaxDataGrid">
+					<ll:fillareatb height="*" showtitle="true" title="菜单列表">
+						<ll:ajaxgrid id="ajaxgrid" onpageclick="retrieve()">
 							<ll:gridcheck></ll:gridcheck>
 							<ll:gridcustom align="center" width="80" title="操作" formatter="customerFunction"></ll:gridcustom>
-							<ll:gridfield field="code" title="扩展属性代码" width="120" readonly="false"></ll:gridfield>
-							<ll:gridfield field="name" title="扩展属性名称" width="120" readonly="false"></ll:gridfield>
-							<ll:gridfield field="query" title="查询语句" readonly="false"></ll:gridfield>
-						</ll:datagrid>
+							<ll:gridcustom align="center" width="150" title="是否启用" formatter="customerEnableFunction"></ll:gridcustom>
+							<ll:gridfield field="roleId" width="150" title="绑定角色"></ll:gridfield>
+							<ll:gridfield field="loginAccountNo" title="登录账号"></ll:gridfield>
+						</ll:ajaxgrid>
 					</ll:fillareatb>
 				</ll:filllayout>
 			</ll:fillarealr>
 		</ll:filllayout>
-		<script type="text/javascript" th:insert="/sys/extendproperty/extendPropertyScript.js"></script>
 	</form>
-	
+	<script type="text/javascript" th:insert="@{sys/admin/adminScript.js}"></script>
 </body>
 </html>
