--- a/01SOURCE/springboot/bootweb/src/main/resources/templates/base.html
+++ b/01SOURCE/springboot/bootweb/src/main/resources/templates/base.html
@@ -6,9 +6,9 @@
 <link th:href="@{/plugins/bootstrap-table-1.12.1/dist/bootstrap-table.min.css}" rel="stylesheet">
 <!-- jquery -->
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" th:href="@{/plugins/bootstrap-select/dist/css/bootstrap-select.css}">
+<link rel="stylesheet" th:href="@{/plugins/bootstrap-select/dist/css/bootstrap-select.css}" />
 <!-- FONTAWESOME STYLES-->
-<link rel="stylesheet" th:href="@{/plugins/Font-Awesome-3.2.1/css/font-awesome.min.css}">
+<link rel="stylesheet" th:href="@{/plugins/Font-Awesome-3.2.1/css/font-awesome.min.css}" />
 <link th:href="@{/btts_9_sp/assets/css/font-awesome.css}" rel="stylesheet" />
 <!--CUSTOM BASIC STYLES-->
 <link th:href="@{/btts_9_sp/assets/css/basic.css}" rel="stylesheet" />
