--- a/01SOURCE/springboot/bootweb/src/main/resources/templates/sys/worksheet/worksheetQuery.html
+++ b/01SOURCE/springboot/bootweb/src/main/resources/templates/sys/worksheet/worksheetQuery.html
@@ -53,6 +53,6 @@
 			</ll:fillarealr>
 		</ll:filllayout>
 	</form>
-	<script type="text/javascript" th:insert="/sys/worksheet/worksheetQueryScript.js"></script>
+	<script type="text/javascript" th:include="/sys/worksheet/worksheetQueryScript.js"></script>
 </body>
 </html>
