--- a/01SOURCE/springboot/bootweb/src/main/resources/templates/sys/extendproperty/extendProperty.html
+++ b/01SOURCE/springboot/bootweb/src/main/resources/templates/sys/extendproperty/extendProperty.html
@@ -56,7 +56,7 @@
 				</ll:filllayout>
 			</ll:fillarealr>
 		</ll:filllayout>
-		<script type="text/javascript" th:insert="/sys/extendproperty/extendPropertyScript.js"></script>
+		<script type="text/javascript" th:include="/sys/extendproperty/extendPropertyScript.js"></script>
 	</form>
 	
 </body>
