--- a/01SOURCE/springboot/bootweb/src/main/resources/templates/sys/menu/menuDialog.html
+++ b/01SOURCE/springboot/bootweb/src/main/resources/templates/sys/menu/menuDialog.html
@@ -27,5 +27,5 @@
 			</ll:fillareatb>
 		</ll:filllayout>
 	</form>
-	<script type="text/javascript" th:insert="/sys/menu/menuDialogScript.js"></script>
+	<script type="text/javascript" th:include="/sys/menu/menuDialogScript.js"></script>
 </body>
