--- a/01SOURCE/springboot/bootweb/src/main/resources/templates/sys/role/role.html
+++ b/01SOURCE/springboot/bootweb/src/main/resources/templates/sys/role/role.html
@@ -54,7 +54,6 @@
 			</ll:fillarealr>
 		</ll:filllayout>
 	</form>
-	<script type="text/javascript" th:insert="/sys/role/roleScript.js"></script>
-	</style>
+	<script type="text/javascript" th:include="/sys/role/roleScript.js"></script>
 </body>
 </html>
