--- a/01SOURCE/springboot/bootweb/src/main/resources/templates/sys/code/code.html
+++ b/01SOURCE/springboot/bootweb/src/main/resources/templates/sys/code/code.html
@@ -61,7 +61,7 @@
 			</ll:fillarealr>
 		</ll:filllayout>
 	</form>
-	<script type="text/javascript" th:insert="sys/code/codeScript.js"></script>
+	<script type="text/javascript" th:include="sys/code/codeScript.js"></script>
 	</style>
 </body>
 </html>
