--- a/01SOURCE/springboot/bootweb/src/main/resources/templates/sys/commonpage/selectMenu.html
+++ b/01SOURCE/springboot/bootweb/src/main/resources/templates/sys/commonpage/selectMenu.html
@@ -20,7 +20,7 @@
 	<form>
 		<ll:filllayout>
 			<ll:fillareatb height="*">
-				<ll:tree id="treeDemo" showcheckbox="false" datasource="/template/sys/menu/menu-tree/datalist?isHasRoot=true"
+				<ll:tree id="treeDemo" showcheckbox="false" datasource="/sys/menu/menu-tree/datalist?isHasRoot=true"
 					showLine="true" onnodeclick="zTreeOnClick()"
 				></ll:tree>
 			</ll:fillareatb>
@@ -33,6 +33,6 @@
 			</ll:fillareatb>
 		</ll:filllayout>
 	</form>
-	<script type="text/javascript" th:insert="sys/commonpage/selectMenuScript.js"></script>
+	<script type="text/javascript" th:include="sys/commonpage/selectMenuScript.js"></script>
 </body>
 </html>
