add springboot parent

--- a/01SOURCE/springboot/bootworkflow/src/main/resources/templates/sys/workflow/historicTaskList.html
+++ b/01SOURCE/springboot/bootworkflow/src/main/resources/templates/sys/workflow/historicTaskList.html
@@ -59,7 +59,7 @@
 			</ll:fillarealr>
 		</ll:filllayout>
 	</form>
-	<script type="text/javascript" th:insert="/sys/workflow/historicTaskListScript.js">
+	<script type="text/javascript" th:include="/sys/workflow/historicTaskListScript.js">
 	
 	</script>
 </body>
